# tauri-plugin-widgets

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  widget.html
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/: TauriGlanceWidget.kt  WidgetActionReceiver.kt  (+2 more)
examples/tauri-plugin-widgets-example/: README.md  index.html  package.json
examples/tauri-plugin-widgets-example/src/: App.css  App.tsx
examples/tauri-plugin-widgets-example/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
examples/tauri-plugin-widgets-example/src-tauri/capabilities/: default.json
examples/tauri-plugin-widgets-example/src-tauri/ios-widget/: MyWidget.swift
examples/tauri-plugin-widgets-example/src-tauri/macos-widget/: .gitignore  Info.plist  TauriWidgetExtension.entitlements  build-widget.sh  embed-widget.sh  project.yml
examples/tauri-plugin-widgets-example/src-tauri/macos-widget/Sources/: MyWidget.swift
examples/tauri-plugin-widgets-example/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
ios/: Package.swift
ios/Sources/: WidgetPlugin.swift
ios/Tests/PluginTests/: WidgetPluginTests.swift
macos/: WidgetReload.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: close_widget_window.toml  create_widget_window.toml  get_items.toml  get_widget_config.toml  poll_pending_actions.toml  reload_all_timelines.toml  reload_timelines.toml  request_widget.toml  set_register_widget.toml  set_widget_config.toml  widget_action.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
swift/: Package.swift
swift/Sources/TauriWidgets/: DynamicElementView.swift  Models.swift  TauriWidgetProvider.swift  WidgetActionIntent.swift  WidgetDataStore.swift
templates/ios-widget/: MyWidget.swift
templates/macos-widget/: Entitlements.plist  MyWidget.swift  project.yml
(+26 files in other folders)
